# OpenGL-Voxel-Engine

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
scripts/: build.sh
src/: CMakeLists.txt  config.h  main.cpp
src/cmn/: CMakeLists.txt  ts_queue.h  ts_set_queue.h
src/controller/: CMakeLists.txt  controller.cpp  controller.h  game_controller.cpp  game_controller.h
src/game/: CMakeLists.txt  block.cpp  block.h  block_enums.h  block_factory.cpp  block_factory.h  block_templated.cpp  block_templated.h  block_texture_map.h  chunk.cpp  chunk.h  chunk_data.cpp  chunk_data.h  chunk_noise.cpp  chunk_noise.h  chunk_noise_config.h  chunk_pos.h  chunk_pos_hash.cpp  chunk_pos_hash.h  chunk_terrain_generator.cpp  chunk_terrain_generator.h  game_config.h  game_scene.cpp  game_scene.h  game_seed.h  world.cpp  world.h
src/game/blocks/: dirt_block.h  grass_block.h  stone_block.h
src/scene/: CMakeLists.txt  camera.cpp  camera.h  game_config.h  game_scene.cpp  game_scene.h  scene.cpp  scene.h
src/view/: CMakeLists.txt  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
